---------------------------
YAM Open Source - ChangeLog
---------------------------

$Id$
$URL$

2014-02-22 Jens Maus <mail@jens-maus.de>

  * tcp/ssl.c: added more debug output to the SSL connection routines.

2014-02-19 Jens Maus <mail@jens-maus.de>

  * Locale_c.sd,Locale_h.sd: reworked the flexcat catalog string handling
    routines to not retrieve all catalog strings on every call of tr() but
    when opening the catalog via OpenCatalog(). This should slightly speed
    up the catalog string handling in YAM and perhaps also improve the
    general GUI handling.
  * tcp/ssl.c: added more debug output to the SSL connection routines.

2014-02-17 Jens Maus <mail@jens-maus.de>

  * tcp/ssl.c: added some more debug output to the SSL connection routines to
    be able to better debug problematic situations. This refs #530.
  * Locale_c.sd: removed a not required 'const' statement that also caused some
    compiler warnings with older GCC versions.

2014-02-16 Jens Maus <mail@jens-maus.de>

  * Makefile: we use a wildcard makefile statement now to get all available
    catalog names instead of having to manually specify them in the Makefile.
  * Makefile, locale: modified makefile to directly use FlexCat 2.13+ to convert
    our .po style translation files to their corresponding .catalog files instead
    of using our 'cd2po.sh' shell script which is now part of the FlexCat project
    instead. Please note that the upcoming FlexCat 2.13 or newer version is
    required to convert po-files to catalog files.

2014-02-15 Jens Maus <mail@jens-maus.de>

  * Locale_?.sd, misc: slightly reworked our flexcat source templates to behave
    a bit more typesafe. Previously everything was performed with "void*"
    pointers. Now typesafe pointers to a struct are used to make sure that only
    valid flexcat definitions are passed to tr().
  * extrasrc/NewReadArgs.c: adapted sources to latest OS4 API where CurrentDir()